# cmake

task1/: .gitignore  CMakeLists.txt
task1/include/: computer.h  game.h  human.h  player.h
task1/src/: main.cpp
task2/: CMakeLists.txt
task2/game/: CMakeLists.txt
task2/game/include/: computer.h  game.h  human.h
task2/game/src/: computer.cpp  game.cpp  human.cpp
task3/: CMakeLists.txt
task3/include/: board.h  computerplayer.h  consolegame.h  consoleplayer.h  game.h  gamemanager.h  player.h  playermanager.h  simpleboard.h
task3/src/: client.cpp  computerplayer.cpp  consolegame.cpp  consoleplayer.cpp  gamemanager.cpp  playermanager.cpp  simpleboard.cpp
